# multi-ibvs-platform

./: .gitignore  CMakeLists.txt  TestClass.cpp  TestClass.h  camera.yml  main.cpp
Ibvs_Simulation/: CMakeLists.txt  control.txt  ibvs_sim.cpp  sim.cpp
calibration/: CMakeLists.txt
calibration/calibration/: CMakeLists.txt
calibration/grabbing/: CMakeLists.txt  image-grabber  image-grabber.cpp
calibration/record/src/:  record_helper.h
doc/aruco marker/: CMakeLists.txt  main.cpp
include/CameraClass/: CMakeLists.txt  CameraClass.h
include/CameraClass/src/: Camera.cpp  Camera.h
include/ImageClass/: CMakeLists.txt
include/ImageClass/src/: Image.cpp  Image.h
include/MeasurementClass/: CMakeLists.txt
include/MeasurementClass/include/: CMakeLists.txt
include/MeasurementClass/include/src/: kalman_filter.h
include/MeasurementClass/src/: Measurement.cpp  Measurement.h
include/MeasurementClass/src/KalmanFilter/src/: kalman_filter.cpp  kalman_filter.h
include/RobotClass/: CMakeLists.txt
include/RobotClass/src/: Robot.cpp  Robot.h
include/ServoClass/: CMakeLists.txt
include/ServoClass/src/: Servo.cpp  Servo.h
include/TestClass/: CMakeLists.txt
include/TrackingClass/: CMakeLists.txt
include/TrackingClass/src/: Tracking.cpp  Tracking.h
kinovaServer/: CMakeLists.txt  robots_server.cxx
kinova_Server/: testClient.cxx
lib/TestClass/: CMakeLists.txt
lib/TestClass/src/: TestClass.cpp
src/: CMakeLists.txt  main.cpp
